# invoicex

./: .gitignore  CLAUDE.md  PROJECT.md  README.md  config.yaml  pyproject.toml
docs/: portfolio-handoff.md
src/: cli.py  config.py  core.py
tests/: test_core.py
